Fixed clipping issue

--- a/frontend/app/src/components/ChallengeGrid/style.scss
+++ b/frontend/app/src/components/ChallengeGrid/style.scss
@@ -9,7 +9,9 @@
     margin: 5% 10%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-row-gap: 1%;
+    //grid-row-gap: 1%;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     grid-auto-rows: 1fr;
 
@@ -80,6 +82,7 @@
 
 .ChallengeItem {
     cursor: pointer;
+    margin-top: 5%;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
